[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
# cw20-base = "0.13"
# cw20 = "0.13"
# serde_json = "1.0"
# env_logger = "0.9.0"
# cosmrs = { version = "0.9.0", features = ["rpc", "cosmwasm"] }
#sudo swupd bundle-add musl
# ring = "0.16.20"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
bip32 = { version = "0.4", optional = true }

ecdsa = { version = "0.14", features = ["std"] }
eyre = "0.6"
k256 = { version = "0.11", features = ["ecdsa", "sha256"] }
rand_core = { version = "0.6", features = ["std"] }
# tokio = { version = "1", optional = true }
thiserror = "1"
# cosmrs = { version = "0.9.0" }

cosmrs = { version = "0.9.0", features = [ "cosmwasm"] }
hyper = { version = "0.14", optional = true, default-features = false, features = ["client", "http1", "http2"] }
hyper-proxy = { version = "0.9.1", optional = true, default-features = false, features = ["rustls"] }
hyper-rustls = { version = "0.22.1", optional = true, default-features = false, features = ["rustls-native-certs", "webpki-roots", "tokio-runtime"] }
# cosmrs = { version = "0.9.0", features = ["rpc", "cosmwasm"] }

tendermint-rpc = { version = "0.23.9", features= ["http"] }
# tokio = { version = "1.20.1", features = ["full"] }
tokio = { version = "1.14.0", features = ["rt", "macros"] }

prost = "0.10.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }

tonic = { version = "0.8", features = ["codegen", "prost"] }
cosmos-sdk-proto = "0.14.0"